# time-tracker

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  release.md
.github/: CODEOWNERS
.github/workflows/: publish.yml
src/time_tracker/: __init__.py  __main__.py  about_modal.py  app.py  app_filter.py  app_rows.py  app_timeline.py  config.py  help_modal.py  modals.py  models.py  pending.py  time_tracker.tcss
src/time_tracker/backends/: base.py  json_backend.py  postgres_backend.py  sqlite_backend.py
src/time_tracker/integrations/: base.py  github.py  multi_github.py
src/time_tracker/widgets/: common.py  entry_list.py  entry_modal.py  ticket_picker.py
